5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1758_2390.log
== TEST (2019-05-28 13:50:41) 
-- CODE:
v = array(eval(input("insira:")))
u = array(eval(input("insira:")))

i = 0
x = max(v)
while(i != max(v)):
	i = i + 1
print(i - 1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:50:55) 
-- CODE:
from numpy import *
v = array(eval(input("insira:")))
u = array(eval(input("insira:")))

i = 0
x = max(v)
while(i != max(v)):
	i = i + 1
print(i - 1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:51:38) 
-- CODE:
from numpy import *
v = array(eval(input("insira:")))
u = array(eval(input("insira:")))

i = 0
x = max(v)
while(i != max(v)):
	i = i + 1
print(x[i] - 1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:51:44) 
-- CODE:
from numpy import *
v = array(eval(input("insira:")))
u = array(eval(input("insira:")))

i = 0
x = max(v)
while(i != max(v)):
	i = i + 1
print(x[i] + 1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:52:16) 
-- CODE:
from numpy import *
v = array(eval(input("insira:")))
u = array(eval(input("insira:")))

i = 0
x = max(v)
while(i != max(v)):
	i = i + 1
a = x[i]
print(a + 1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:52:52) 
-- CODE:
from numpy import *
v = array(eval(input("insira:")))
u = array(eval(input("insira:")))

i = 0
x = max(v)
while(i != max(v)):
	i = i + 1

print(i)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:53:57) 
-- CODE:
from numpy import *
v = array(eval(input("insira:")))
u = array(eval(input("insira:")))

i = 0
j = 0
x = max(v)
while(i != max(v)):
		j = j + 1
	i = i + 1
	

print(i)
	
-- ERROR:
File "XXXX", line 10
    i = i + 1
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:54:11) 
-- CODE:
from numpy import *
v = array(eval(input("insira:")))
u = array(eval(input("insira:")))

i = 0
j = 0
x = max(v)
while(i != max(v)):
		j = j + 1
		i = i + 1
	

print(i)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:54:18) 
-- CODE:
from numpy import *
v = array(eval(input("insira:")))
u = array(eval(input("insira:")))

i = 0
j = 0
x = max(v)
while(i != max(v)):
		j = j + 1
		i = i + 1
	

print(j)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:56:37) 
-- CODE:
from numpy import *
v = array(eval(input("insira:")))
u = array(eval(input("insira:")))

i = 0
mes = 1
x = max(v)
while(v[i] < max(v)):
		mes = mes + 1
		i = i + 1
	

print(mes)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:56:40) 
-- CODE:
from numpy import *
v = array(eval(input("insira:")))
u = array(eval(input("insira:")))

i = 0
mes = 1
x = max(v)
while(v[i] < max(v)):
		mes = mes + 1
		i = i + 1
	

print(mes)
	
-- EXECUTION TIME:
0.448247
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
